--- a/src/main/resources/templates/single1.html
+++ b/src/main/resources/templates/single1.html
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="matches elite-app">
 		<div class="container">
 		<div class="tittle-agileinfo">
-			<h3 th:text="${l.truename}" style="display: inline-block;margin-left: 500px;"></h3>&nbsp;<img src="../images/baitu.png" style="width: 20px;height: 20px;" name="sss">
+			<h3 th:text="${l.bmname}" style="display: inline-block;margin-left: 500px;"></h3>&nbsp;<img src="../images/baitu.png" style="width: 20px;height: 20px;" name="sss">
 			<!--用于获取会员状态-->
             <input type="hidden" name="VIP" th:value="${l.VIP}">
 		</div>
