--- a/src/main/resources/templates/GeRen.html
+++ b/src/main/resources/templates/GeRen.html
@@ -49,7 +49,7 @@
                                 <li><a href="../attention/mygz">我的关注</a></li>
                             </ul>
                         </li>
-                        <li><a href="../send_paste/pinglun">交友论坛</a></li>
+                        <li><a href="../vip/men">联系我们</a></li>
                         <li><a href="../combo/viptc">会员</a></li>
                     </ul>
                 </div>
