--- a/src/main/resources/templates/choose_mate.html
+++ b/src/main/resources/templates/choose_mate.html
@@ -86,12 +86,11 @@
         <label for="education">学历</label>
         <select class="form-control" id="education" name="education" style="width: 500px">
             <option value="不限" th:selected="${Dlist.education=='不限'}">不限</option>
+            <option value="小学" th:selected="${Dlist.education=='小学'}">小学</option>
+            <option value="中学" th:selected="${Dlist.education=='中学'}">中学</option>
             <option value="高中" th:selected="${Dlist.education=='高中'}">高中</option>
-            <option value="中专" th:selected="${Dlist.education=='中专'}">中专</option>
-            <option value="大专" th:selected="${Dlist.education=='大专'}">大专</option>
             <option value="本科" th:selected="${Dlist.education=='本科'}">本科</option>
-            <option value="硕士" th:selected="${Dlist.education=='硕士'}">硕士</option>
-            <option value="博士" th:selected="${Dlist.education=='博士'}">博士</option>
+            <option value="专科" th:selected="${Dlist.education=='专科'}">专科</option>
         </select>
     </div>
     <div class="form-group">
