--- a/src/main/resources/templates/lists.html
+++ b/src/main/resources/templates/lists.html
@@ -272,7 +272,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- smooth scrolling -->
 <script type="text/javascript">
 
-    //转换时间格式
+    //转换时间格式2
     function transferTime(cTime) {     //将json串的一串数字进行解析
         var jsonDate = new Date(parseInt(cTime));
         //       alert(jsonDate);
