--- a/src/main/resources/templates/vipdqtime.html
+++ b/src/main/resources/templates/vipdqtime.html
@@ -17,11 +17,38 @@
 <body>
 
 <div>
-    <div style="margin-top: 70px;margin-left: 100px">
-        <span style="font-size: 20px;font-weight: bold">尊贵的会员</span><p th:text="${myvip[0].bmname}" style="font-weight: bold;color: red;margin-left: 80px;font-size: 15px;"></p><br>
-        <span style="font-size: 20px;font-weight: bold">到期时间</span><p th:text="${myvip[0].vtime}" style="color:red;font-weight: bold;margin-left: 80px;font-size: 15px;"></p>
-        <a href="../combo/viptc" target="_blank"><span class="label label-default">点击续会员</span></a>
-      <!--  <a href="../combo/viptc" target="_blank" style="border: 1px groove black;background: black;color: white">点击续会员</a>-->
+    <div style="margin-top: 70px;">
+        <form role="form"  style="margin-left:100px;float: left;width: 200px">
+            <div class="form-group">
+                <label style="font-size: 20px;font-weight: bold">尊贵的会员</label>
+                <p th:text="${myvip[0].bmname}"  class="form-control" style="font-weight: bold;color: red;font-size: 15px;margin-left:30px"></p><br>
+            </div>
+            <div class="form-group">
+                <label style="font-size: 20px;font-weight: bold">到期时间</label>
+               <p th:text="${myvip[0].vtime}"  class="form-control" style="color:red;font-weight: bold;font-size: 15px;margin-left:30px"></p>
+            </div>
+            <!--<span style="font-size: 20px;font-weight: bold">尊贵的会员</span><p th:text="${myvip[0].bmname}" style="font-weight: bold;color: red;margin-left: 80px;font-size: 15px;"></p><br>-->
+            <!--<span style="font-size: 20px;font-weight: bold">到期时间</span><p th:text="${myvip[0].vtime}" style="color:red;font-weight: bold;margin-left: 80px;font-size: 15px;"></p>-->
+            <div class="form-group">
+            <a href="../combo/viptc" target="_blank" style="font-size:35px"><span class="label label-default">点击续会员</span></a>
+            </div>
+        </form>
+        <form role="form"  style="float:left; margin-left:100px;width: 400px">
+            <!--<p th:text="${list}"></p>-->
+            <!--繳費数据:[{money=248, pfid=1, peoject=会员, bmid=1, paytime=2020-08-21, ptime=1个月}]-->
+            <div class="form-group">
+                <label style="font-size: 15px;font-weight: bold">缴费项目</label>
+                <p th:text="${list[0].ptime}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>
+            </div>
+            <div class="form-group">
+                <label style="font-size: 15px;font-weight: bold">缴费金额</label>
+                <p th:text="${list[0].money}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>
+            </div>
+            <div class="form-group">
+                <label style="font-size: 15px;font-weight: bold">缴费时间</label>
+                <p th:text="${list[0].paytime}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>
+            </div>
+        </form>
     </div>
 </div>
 
