--- a/src/main/resources/templates/GeRen.html
+++ b/src/main/resources/templates/GeRen.html
@@ -89,10 +89,10 @@
 </span>
 <!--主体-->
 <div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-2">
+    <div class="row" style="margin-left:150px">
+        <div class="col-sm-2" style="float:left">
             <a class="list-group-item active" style="background: black">个人管理&nbsp;&nbsp;<img src="../images/novip.png" id="imgvip"></a>
-            <a href="../basic_message/Selmate"  target="myframe" class="list-group-item"><img src="../images/tubiao1.png">基本信息</a>
+            <a href="../basic_message/Selmate"  target="myframe"  class="list-group-item"><img src="../images/tubiao1.png">基本信息</a>
             <a href="../Details_message/SelDetails" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">详细信息</a>
             <a href="../life_message/Selmate" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">生活信息</a>
             <a href="../choose_mate/Selmate" target="myframe" class="list-group-item"><img src="../images/tubiao1.png">择偶标准</a>
@@ -100,7 +100,7 @@
             <a href="../vip/mydztime" target="myframe" class="list-group-item" id="myzd"><img src="../images/tubiao1.png">我的置顶</a>
         </div>
         <div class="col-sm-10">
-            <iframe name="myframe" src="../Details_message/SelDetails" width="1110" height="540" frameborder="0" scrolling="Yes"></iframe>
+            <iframe name="myframe" src="../Details_message/SelDetails" width="970" height="540" style="float:left" frameborder="0" scrolling="Yes"></iframe>
         </div>
     </div>
 </div>
