--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -365,7 +365,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     $(document).ready(function() {
         let hn=$("#hxnum").val();
         let hp=$("#hxpwd").val();
-        if(hn!=null || hn!=''){
+        if(hn!=undefined){
             $("#tcBox").click();
         }
         /*
