--- a/src/main/resources/templates/zddqtime.html
+++ b/src/main/resources/templates/zddqtime.html
@@ -23,6 +23,39 @@
         <a href="../Top/showtop" target="_blank"><span class="label label-default">点击续置顶</span></a>
       <!--  <a href="../combo/viptc" target="_blank" style="border: 1px groove black;background: black;color: white">点击续会员</a>-->
     </div>
+    <!--<div style="margin-top: 70px;">-->
+        <!--<form role="form"  style="margin-left:100px;float: left;width: 200px">-->
+            <!--<div class="form-group">-->
+                <!--<label style="font-size: 20px;font-weight: bold">尊贵的置顶用户</label>-->
+                <!--<p th:text="${zd[0].bmname}"  class="form-control" style="font-weight: bold;color: red;font-size: 15px;margin-left:30px"></p><br>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+                <!--<label style="font-size: 20px;font-weight: bold">到期时间</label>-->
+                <!--<p th:text="${zd[0].jstime}"  class="form-control" style="color:red;font-weight: bold;font-size: 15px;margin-left:30px"></p>-->
+            <!--</div>-->
+            <!--&lt;!&ndash;<span style="font-size: 20px;font-weight: bold">尊贵的会员</span><p th:text="${myvip[0].bmname}" style="font-weight: bold;color: red;margin-left: 80px;font-size: 15px;"></p><br>&ndash;&gt;-->
+            <!--&lt;!&ndash;<span style="font-size: 20px;font-weight: bold">到期时间</span><p th:text="${myvip[0].vtime}" style="color:red;font-weight: bold;margin-left: 80px;font-size: 15px;"></p>&ndash;&gt;-->
+            <!--<div class="form-group">-->
+                <!--<a href="../combo/viptc" target="_blank" style="font-size:35px"><span class="label label-default">点击续会员</span></a>-->
+            <!--</div>-->
+        <!--</form>-->
+        <!--<form role="form"  style="float:left; margin-left:100px;width: 400px">-->
+            <!--&lt;!&ndash;<p th:text="${list}"></p>&ndash;&gt;-->
+            <!--&lt;!&ndash;繳費数据:[{money=248, pfid=1, peoject=会员, bmid=1, paytime=2020-08-21, ptime=1个月}]&ndash;&gt;-->
+            <!--<div class="form-group">-->
+                <!--<label style="font-size: 15px;font-weight: bold">缴费项目</label>-->
+                <!--<p th:text="${list[0].ptime}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+                <!--<label style="font-size: 15px;font-weight: bold">缴费金额</label>-->
+                <!--<p th:text="${list[0].money}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>-->
+            <!--</div>-->
+            <!--<div class="form-group">-->
+                <!--<label style="font-size: 15px;font-weight: bold">缴费时间</label>-->
+                <!--<p th:text="${list[0].paytime}"  class="form-control" style="font-weight: bold;font-size: 10px;margin-left:30px;width: 200px"></p>-->
+            <!--</div>-->
+        <!--</form>-->
+    <!--</div>-->
 </div>
 
 </body>
