--- a/src/main/resources/templates/choose_mate.html
+++ b/src/main/resources/templates/choose_mate.html
@@ -85,7 +85,7 @@
     <div class="form-group">
         <label for="education">学历</label>
         <select class="form-control" id="education" name="education" style="width: 500px">
-            <option value="不限" th:selected="${Dlist.education=='不限'}">不限</option>
+            <option value="随便" th:selected="${Dlist.education=='不限'}">不限</option>
             <option value="小学" th:selected="${Dlist.education=='小学'}">小学</option>
             <option value="中学" th:selected="${Dlist.education=='中学'}">中学</option>
             <option value="高中" th:selected="${Dlist.education=='高中'}">高中</option>
