--- a/src/main/resources/templates/seek.html
+++ b/src/main/resources/templates/seek.html
@@ -94,7 +94,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="tittle-agileinfo">
             <h3>搜索意中人</h3>
         </div>
-        <div style="width: 1090px;height: 200px;background: black;margin-bottom: 30px">
+        <div style="width: 1090px;height: 200px;background: darkorchid;margin-bottom: 30px">
             <form action="../attention/mhncid2" method="post" style="margin-bottom: 20px;">
                 <span style="color: white;font-weight: bold">意中人:</span><input type="text" name="params"  placeholder="请输入ID或昵称精准搜索" style="width: 380px;margin-top: 40px;border: outset;">
                 <input type="submit" value="搜索" class="btn btn-info" style="width: 85px;height: 30px;">
