--- a/src/main/resources/templates/tvClassroom.html
+++ b/src/main/resources/templates/tvClassroom.html
@@ -97,7 +97,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--主题开始-->
         <div style="width: 1200px;">
             <span th:each="b : ${cv}">
-                <div style="width: 250px;height: 250px;background: black;margin-left: 40px;margin-bottom: 10px;float: left">
+                <div style="width: 250px;height: 250px;background: darkorchid;margin-left: 40px;margin-bottom: 10px;float: left">
                     <video width="250" height="200" controls  th:src="${b.voids}" id="TV"  type="video/mp4">
                         您的浏览器不支持 HTML5 video播放器
                     </video>
